--- a/1 Poniedziałek/1 Optyka materiałów/OM 22.10.17.md
+++ b/1 Poniedziałek/1 Optyka materiałów/OM 22.10.17.md
@@ -1,12 +1,12 @@
 Fale podłużne a poprzeczne:
 
 * poprzeczne - kierunek drgań jest prostopadły do kierunku rozchodzenia się fali **np. fala elektromagnetyczna**
-* podłużna - kierunek drgań jest równoległy do keirunku rozchodzenia się fali, np. fala dźwiękowa, trzęsienie ziemi - ogólnie fale gęstośći i ciśnienia
+* podłużna - kierunek drgań jest równoległy do kierunku rozchodzenia się fali, np. fala dźwiękowa, trzęsienie ziemi - ogólnie fale gęstości i ciśnienia
 
 Przykłady fal:
 
 * paczka falowa - suma wielu fal, można ją przedstawić jako jedno równanie, ważna dla mechaniki kwantowej
-* fala stojąca - jaka jest wiadomo, ważna dla budowy laserów; gdyby nie generowanie fali stojące, w rezonatorza lasera fale by się wygaszały
+* fala stojąca - jaka jest wiadomo, ważna dla budowy laserów; gdyby nie generowanie fali stojące, w rezonatorze lasera fale by się wygaszały
 
 Jednowymiarowe skalarne równanie falowe funkcji f:
 
