--- a/1 Poniedziałek/1 Optyka materiałów/OM 22.11.14.md
+++ b/1 Poniedziałek/1 Optyka materiałów/OM 22.11.14.md
@@ -43,7 +43,7 @@ Zjawisko kluczowe dla działania światłowodów
 
 Światłowody - gdybyśmy otoczyli światłowód metalem żeby odbijał, straty byłyby ogromne - stracilibyśmy cały sygnał po 1 metrze. Dlatego wykorzystujemy zjawisko całkowitego wewnętrznego odbicia, gdzie starty są znikome.
 
-Metamateriały, en.left-handen materials (czapka niewidka)
+Metamateriały, en.left-handed materials (czapka niewidka),
 materiały o ujemnym współczynniku załamania
 
 Polaryzacja przy odbiciu
