--- a/1 Poniedziałek/1 Optyka materiałów/OM 22.12.19.md
+++ b/1 Poniedziałek/1 Optyka materiałów/OM 22.12.19.md
@@ -17,7 +17,7 @@ Chromofory (w medycynie):
 
 - endogenne - melanina, hemoglobina, rodopsyna, kwasy nukleinowe (UV)
 - egzogenne
-	- barwniki kationowe - tiazyny: błękit metylowy, tiopironia - w reakcji fotodynamicznej niszą błony komórkowe, trzeba stosować na zewnątrz komórek
+	- barwniki kationowe - tiazyny: błękit metylowy, tiopironia - w reakcji fotodynamicznej niszczą błony komórkowe, trzeba stosować na zewnątrz komórek
 	- fluoresceiny - róż bengalski, eozyna, porfiryny 
 	- akrynidy - łączą się z DNA - mutacje
 
