--- a/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.10.10.md
+++ b/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.10.10.md
@@ -36,4 +36,4 @@ ZTE - założenia techniczno-ekonomiczne - analiza
 
 PP - projekt procesowy - robiony przez chemików inżynierów
 
-PT - ? - robiony przez biura projektowe
+PT - projekt techniczny - robiony przez biura projektowe
