--- a/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.10.17.md
+++ b/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.10.17.md
@@ -81,7 +81,7 @@ Można oznaczać zdolność proukcyjną ale też zdolność przerobową.
 
 Przeliczenie *Zdolności Produkcyjnej Rocznej* (ZPR) instalacji (wartośćbilansowa, ekonomiczna w skali roku) na *Zdolność Produkcyjną Godzinową* (ZPH) instalacji o dizałaniu ciągłym (kg produktu na godzinę) lub na *Zdolność Produkcyjną na Szarżę* instalaci o działaniu okresowym (kg produktu na szarżę)
 
-#### Instalacja o działaniu ciągłym** 
+#### Instalacja o działaniu ciągłym 
 
 $$ZPH=\frac{ZPR}{7200}\ [kg/h]$$
 
