--- a/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.10.17.md
+++ b/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.10.17.md
@@ -60,7 +60,7 @@ Zazwyczaj kilka mniejszych instalacji zużywa mniej energii niż jedna duża o t
 
 Projekt procesowy instalacji o działaniu *a* do otrzymywania *b* o zdolności produkcyjne *c* Mg produktu na rok
 
-*a* - ciagłym/okresowym, *b* - nazwa produktu, *c* - ilość produktu otrzymana w ciągu roku 
+*a* - ciągłym/okresowym, *b* - nazwa produktu, *c* - ilość produktu otrzymana w ciągu roku 
 
 ### Wprowadzenie do PP
 
@@ -69,17 +69,17 @@ We **wprowadzeniu** do PP muszą być podane:
 1. Co otrzymujemy - produkt
 2. Co otrzymujemy dodatkowo - produkty uboczne
 3. Z czego otrzymujemy - surowce
-4. Ilość produktu głównego - zdolność pordukcyjna instalacji: w Mg poruktu/rok
+4. Ilość produktu głównego - zdolność produkcyjna instalacji: w Mg produktu/rok
 5. Sposób pracy instalacji - ciągły/okresowy
 6. Analiza zapotrzebowania rynku: kraj/eksport, ilość/jakość. Bonus - innowacyjność. 
 7. Odpady - zagospodarowanie odpadów/utylizacja, koszty/zyski
-8. Bezpieczństwo techniczne i procesowe instalacji
+8. Bezpieczeństwo techniczne i procesowe instalacji
   
-Można oznaczać zdolność proukcyjną ale też zdolność przerobową. 
+Można oznaczać zdolność produkcyjną ale też zdolność przerobową. 
 
 ### Zdolność produkcyjna instalacji
 
-Przeliczenie *Zdolności Produkcyjnej Rocznej* (ZPR) instalacji (wartośćbilansowa, ekonomiczna w skali roku) na *Zdolność Produkcyjną Godzinową* (ZPH) instalacji o dizałaniu ciągłym (kg produktu na godzinę) lub na *Zdolność Produkcyjną na Szarżę* instalaci o działaniu okresowym (kg produktu na szarżę)
+Przeliczenie *Zdolności Produkcyjnej Rocznej* (ZPR) instalacji (wartość bilansowa, ekonomiczna w skali roku) na *Zdolność Produkcyjną Godzinową* (ZPH) instalacji o działaniu ciągłym (kg produktu na godzinę) lub na *Zdolność Produkcyjną na Szarżę* instalacji o działaniu okresowym (kg produktu na szarżę)
 
 #### Instalacja o działaniu ciągłym 
 
@@ -99,11 +99,11 @@ $$ 365 [day] - 65 (doby\ postojowe)[day]=300[day]\cdot 24[h]=7200[h]$$
 
 $$ ZPSz=\frac{ZPR}{N} [ \frac{kg}{szarżę}]$$
 
-N - liczba szarż w ciągu roku. Przy określaniu N bierzemy pod uwagę: liczbędób pracy instalacji przyjęte przez projektanta, liczbę zmian na dobę i liczby szarż na zmianę
+N - liczba szarż w ciągu roku. Przy określaniu N bierzemy pod uwagę: liczbę dób pracy instalacji przyjęte przez projektanta, liczbę zmian na dobę i liczby szarż na zmianę
 
 np. $800\ szarż=200\ dób\ pracy \cdot 2\ zmiany/dobę \cdot 2\ szarże/zmianę$ 
 
-ZPH i ZPSz wygodnie istotnie zaokrągląć w górę
+ZPH i ZPSz wygodnie istotnie zaokrąglać w górę
 
 ### Lokalizacja 
 
