--- a/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.11.28.md
+++ b/1 Poniedziałek/3 Inżynieria chemiczna - wykład/IC 22.11.28.md
@@ -1,1 +1,11 @@
 Nie było mnie - grałem w filmie
+
+![[Pasted image 20230205202949.png]]
+
+   d – średnica mieszadła, m  
+   D – średnica mieszalnika, m  
+   H – wysokość słupa cieczy, m  
+   B – szerokość przegrody, m  
+   h – wysokość zawieszenia mieszadła, m  
+   a – długość łopatki mieszadła, m  
+   b – wysokość łopatki mieszadła, m
