--- a/Semestr 6/3 Środa/4 KZRl/Lab 10,11.md
+++ b/Semestr 6/3 Środa/4 KZRl/Lab 10,11.md
@@ -33,3 +33,5 @@ równanie jest spełnione z pewnym prawdopodobieństwem, które jest większe dl
 
 Dla kryształów niecentrosymetrycznych faza przyjmuje wartości w zakresu 0-360$^o$. Jej wartość określa się ze wzoru tangensowego ($tg\varphi(H_1)=$ jakaś gruba zależność od $H_2$ i $H_3$), dla refleksów związanych relacją trypletową $\Sigma_2$ 
 
+$<|E^2-1|>$ = 0.968 wtedy centrosymetryczny
+
