--- a/Semestr 6/3 Środa/3 MM/MM 23.03.08.md
+++ b/Semestr 6/3 Środa/3 MM/MM 23.03.08.md
@@ -10,7 +10,7 @@ We wszystkich materiałach metalicznych jako wiązanie dominujące występuje wi
 
 Cechy:
 
-- dobre przewodnictwo cieplne
+- dobre przewodnictwo elektryczne
 - dobre przewodnictwo cieplne
 - nieprzezroczystość
 - **plastyczność**
@@ -24,9 +24,12 @@ Komórka elementarna a zatem sieć krystaliczna może mieć różną postać geo
 
 Wyróżniamy komórki typu:
 
-- sieć A1 - regularna, płasko centrowana - `slajd` (generalnie metale bardzo plastyczne)
-- sieć A2 - regularna , przestrzennie centrowana - `slajd` (generalnie średnia plastyczność)
-- sieć A3 - heksagonalna, zwarta - `slajd` (generalnie twarde)
+- sieć A1 - regularna, płasko centrowana - (generalnie metale bardzo plastyczne)
+![[Pasted image 20230607000255.png]]
+- sieć A2 - regularna , przestrzennie centrowana - (generalnie średnia plastyczność)
+![[Pasted image 20230607000313.png]]
+- sieć A3 - heksagonalna, zwarta - (generalnie twarde)
+![[Pasted image 20230607000357.png]]
 
 [[Dodatek o właściwościach mechanicznych]]
 
