--- a/Semestr 6/3 Środa/2 BM/BM 23.03.15.md
+++ b/Semestr 6/3 Środa/2 BM/BM 23.03.15.md
@@ -1,4 +1,4 @@
-Biomateriał to każda substancja (inna niż lek) lub kombinacja substancji syntetycznych lub naturalnych, która może być użyta w dowolnym czasie, a której zadaniem jest uzupełnienie lub zastąpienie tkanek narządu lub jego części w celu spełnienia pewnej określonej funkcji.
+	wqqwBiomateriał to każda substancja (inna niż lek) lub kombinacja substancji syntetycznych lub naturalnych, która może być użyta w dowolnym czasie, a której zadaniem jest uzupełnienie lub zastąpienie tkanek narządu lub jego części w celu spełnienia pewnej określonej funkcji.
 
 Przykłady
 
