--- a/Semestr 6/1 Poniedziałek/2 TP/TP 23.03.06.md
+++ b/Semestr 6/1 Poniedziałek/2 TP/TP 23.03.06.md
@@ -8,7 +8,7 @@ Monomer - związek chemiczny, z którego w wyniku polimeryzacji otrzymuje się p
 Makrocząsteczka - pojedyncza cząsteczka o dużych rozmiarach rozpatrywana niezależnie od makroskopowego układu.
 Mer - podstawowa jednostka budulcowa makrocząsteczki
 Polimer - makroskopowy układ złożony z wielu statystycznie jednakowych makrocząsteczek
-Homopolimer - polimer otrzymany w wyniku polimeryzacji jedn- ego monomeru (domyślnie - polimer)
+Homopolimer - polimer otrzymany w wyniku polimeryzacji jednego monomeru (domyślnie - polimer)
 Kopolimer - polimer, którego makrocząsteczki złożone są z co najmniej (i na ogół) dwóch rodzajów merów
 Terpolimer - polimer, którego makrocząsteczki złożone są z trzech rodzajów merów
 Polimer usieciowany - polimer, którego makrocząsteczki połączone są miedzy sobą wiązaniami chemicznymi. Liczbę wiązań "spinających" dwa sąsiadujące łańcuchy określa się mianem *gęstości usieciowania*
