--- a/Semestr 6/1 Poniedziałek/2 TP/TP 23.03.27.md
+++ b/Semestr 6/1 Poniedziałek/2 TP/TP 23.03.27.md
@@ -24,23 +24,33 @@ $\phi$ - ułamek objętościowy
 $\gamma$ - szybkość przepływu warstwy polimeru
 $\eta_0$ - lepkość rozpuszczalnika
 
-Graniczna liczba lepkościowa
+Graniczna liczba lepkościowa (lepkość istotna)
 
 $[\eta]=\lim_{c_m \rightarrow 0} \frac{\eta-\eta_0}{\eta_0} \cdot \frac{1}{c_m}$
 
 Równanie Marka-Houwinka-Sakurady:
 
-`nie przepisałem`
+$[\eta]=KM^\alpha$
+
+M - masa cząsteczkowa polimeru
+Reszta - stałe charakterystyczne dla pary polimer-rozpuszczalnik
 
 Lepkościowo średnia masa cząsteczkowa
 
-`slajdy ze ścianą wzorów, wykresem i tabelką - nie przepisałem`
+$\bar{M}_\nu=(\frac{\sum N_iM_i^{1+\alpha}}{\sum N_iM_i})^{1/\alpha}$
+
+ta sama $\alpha$
 
 Lepkość roztworów stężonych
 
-stężenie krytyczne - $c^*=const \cdot(L^2d)^{-1}$
-
 Lepkość w funkcji stężenia rośnie liniowo do stężenia krytycznego potem opada (krzywą wypukłą do dołu)
+
+![[Pasted image 20230627001030.png]]
+
+Stężenie krytyczne - $c^*=const \cdot(L^2d)^{-1}$
+
+L - długość "pałeczki" polimeru
+d - średnica "pałeczki"
 
 Dobry rozpuszczalnik to taki w którym zachodzi solwatacja - rozkłębianie makrocząsteczki (ekspansji)
 
