--- a/Semestr 5/2 Wtorek/2 Nanomateriały/NM 22.10.11.md
+++ b/Semestr 5/2 Wtorek/2 Nanomateriały/NM 22.10.11.md
@@ -72,7 +72,7 @@ Klasyfikacja ze względu na zastosowanie
     * procesory
     * baterie słoneczne
 * przemysł
-    * budowniczy
+    * budowlany
     * kosmiczny
     * rolniczy
 * medycyna
