--- a/Semestr 5/5 Piątek/3 Kompozyty - laboratorium/K3.md
+++ b/Semestr 5/5 Piątek/3 Kompozyty - laboratorium/K3.md
@@ -120,14 +120,14 @@ Najpełniejszą charakterystykę rozciągania tworzyw daję wykres rozciągania,
 
 Parametry na wykresie rozciągania:
 
-|parametr| oznaczenie na wykresie|
-|-|-|
-|granica proporcjonalności| $\sigma_1$|
-|(umowna) granica plastyczności| $\sigma_2$|
-|wydłużenie względne na granicy plastyczności| $\varepsilon_2$|
-|doraźna wytrzymałość na rozciąganie|$\sigma_3$|
-|naprężenie zrywające|$\sigma_4$|
-|wydłużenie względne przy zerwaniu| $\varepsilon_4$|
+| parametr | oznaczenie na wykresie |  |
+| ---- | ---- | ---- |
+| granica proporcjonalności | $\sigma_1$ |  |
+| (umowna) granica plastyczności | $\sigma_2$ |  |
+| wydłużenie względne na granicy plastyczności | $\varepsilon_2$ |  |
+| doraźna wytrzymałość na rozciąganie | $\sigma_3$ |  |
+| naprężenie zrywające | $\sigma_4$ |  |
+| wydłużenie względne przy zerwaniu | $\varepsilon_4$ |  |
 
 
 Zaciskanie próbki w uchwytach zrywarki lub maszyny wytrzymałościowej powoduje z reguły drobne uszkodzenia powierzchniowej warstwy tworzywa. Doprowadza to do rozerwania w tych właśnie uszkodzonych miejscach, a wyniki są obarczone znacznymi błędami. W przypadku pomiarów próbek wiosełkowych, uszkodzenie spowodowane szczękami zrywarki nie mają wpływu na wyniki. Zniszczenie próbki następuję z reguły w środkowej, przewężonej części belki, gdzie przekrój jest najmniejszy a naprężenia największe.
